--- a/martin_blog/boss.config
+++ b/martin_blog/boss.config
@@ -97,11 +97,11 @@
 %% db_configure - Database adapter specific configuration options. Defaults to [].
 
     {db_host, "localhost"},
-    {db_port, 1978},
-    {db_adapter, mock},
-%    {db_username, "boss"},
-%    {db_password, "boss"},
-%    {db_database, "boss"},
+    {db_port, 5432},
+    {db_adapter, pgsql},
+    {db_username, "development"},
+    {db_password, "development"},
+    {db_database, "blog"},
 %    {db_configure, []},
 
 %%  PostgreSQL only
