--- a/.gitignore
+++ b/.gitignore
@@ -223,3 +223,24 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.gitignore.io/api/windows,eclipse,erlang,python,scala,java
+
+### Elixir ###
+/_build
+/cover
+/deps
+/doc
+erl_crash.dump
+*.ez
+
+### Elixir Patch ###
+### Phoenix ###
+# Phoenix: a web framework for Elixir
+_build/
+/db
+/*.ez
+node_modules/
+/priv/static/
+/config/prod.secret.exs
+/rel
+
+# End of https://www.gitignore.io/api/elixir,phoenix
